--- a/ReleaseManagement/ReleaseManagement.Mvvm/Views/Layout.cshtml
+++ b/ReleaseManagement/ReleaseManagement.Mvvm/Views/Layout.cshtml
@@ -15,6 +15,7 @@
                 <ul class="nav navbar-nav mr-auto">
                     <li class="nav-item"><a href="/" class="nav-link">App Overview</a></li>
                     <li class="nav-item"><a href="/Home/About" class="nav-link">Environment Overview</a></li>
+                    <li class="nav-item"><a href="/Client/Index" class="nav-link">Client Overview</a></li>
                     <li class="nav-item"><a href="/Home/Contact" class="nav-link">References</a></li>
                 </ul>
 
